# supercollider

docs/: Doxyfile
editors/sc-ide/widgets/: goto_line_tool.hpp
external_libraries/: CMakeLists.txt
external_libraries/catch/: CMakeLists.txt  catch.hpp
testsuite/: CMakeLists.txt
testsuite/editors/: CMakeLists.txt
testsuite/editors/sc-ide/: CMakeLists.txt
testsuite/editors/sc-ide/boosttest_sc-ide_tests/: CMakeLists.txt  main.cpp
testsuite/editors/sc-ide/boosttest_sc-ide_tests/test_helpers/: boosttest_qt_string_makers.hpp
testsuite/editors/sc-ide/boosttest_sc-ide_tests/widgets/: goto_line_tool_tests.cpp
testsuite/editors/sc-ide/boosttest_sc-ide_tests/widgets/util/: color_widget_tests.cpp
testsuite/editors/sc-ide/catch2_sc-ide_tests/: CMakeLists.txt  color_widget_tests.cpp  main.cpp
testsuite/editors/sc-ide/catch2_sc-ide_tests/test_helpers/: catch_qt_string_makers.hpp
testsuite/editors/sc-ide/catch2_sc-ide_tests/widgets/: goto_line_tool_tests.cpp
testsuite/editors/sc-ide/catch2_sc-ide_tests/widgets/util/: color_widget_tests.cpp
testsuite/editors/sc-ide/common_test_code/: CMakeLists.txt  safe_qcompare.h
testsuite/editors/sc-ide/qttest_sc-ide_tests/: CMakeLists.txt  main.cpp
testsuite/editors/sc-ide/qttest_sc-ide_tests/test_helpers/: auto_test.hpp
testsuite/editors/sc-ide/qttest_sc-ide_tests/widgets/: goto_line_tool_tests.cpp
testsuite/editors/sc-ide/qttest_sc-ide_tests/widgets/util/: color_widget_tests.cpp
